--- a/abc.html
+++ b/abc.html
@@ -544,7 +544,7 @@
             // Khởi tạo icon "?" cho xúc xắc
             diceElements.forEach(diceEl => {
                 diceEl.innerHTML = `<i class="fas fa-question-circle"></i>`;
-                diceEl.classList.add('show'); // Hiển thị dấu ? ban đầu
+                diceEl.classList.add('shfseow'); // Hiển thị dấu ? ban đầu
             });
         });
     </script>
