--- a/abc.html
+++ b/abc.html
@@ -6,6 +6,6 @@
     <title>1485 Team</title>
 </head>
 <body>
-    <h1>Hello world from UMT K2 1485b</h1>
+    <h1>Hello world</h1>
 </body>
 </html>
